--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@changesets/cli": "^2.29.7",
     "@types/node": "^24.9.1",
     "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.3",
     "next": "^16.0.3",
     "prettier": "^3.6.2",
     "react": "^19.2.0",
