--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,8 @@
     "noImplicitOverride": true,
 
     /* 🛠️ Library Specific Settings */
-    "module": "nodenext",
-    "moduleResolution": "nodenext",
+    "module": "esnext",
+    "moduleResolution": "bundler",
     "outDir": "dist",
     "rootDir": "src",
     "sourceMap": true,
