--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,5 +27,5 @@
   },
   /* 🛠️ Project Structure Control */
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "**/*.test.ts", "**/tests/**"]
 }
